--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,9 @@ nav{
   background-color: transparent;
   color: white;
   font-size: 1.1rem;
+  caret-color: yellow;
 }
-.search-con > input:hover{
+.search-con > input:focus{
   outline: none;
 }
 
